Prevent swaps value input placeholder from jumping when focused

--- a/ui/app/pages/swaps/dropdown-input-pair/index.scss
+++ b/ui/app/pages/swaps/dropdown-input-pair/index.scss
@@ -17,7 +17,7 @@
       border: 1px solid $Grey-100;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-left: none;
+      border-left-color: transparent;
       height: 60px;
     }
 
